File Upload and Delete Functionality Added for Edit Page

--- a/SITE/src/main/resources/application.properties
+++ b/SITE/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.h2.console.path=/h2-console
 # Hibernate settings
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+file.upload-dir=uploads
