File Name Modifications (ProjectID) and PDF Validation Added

--- a/SITE/src/main/resources/application.properties
+++ b/SITE/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 file.upload-dir=uploads
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
