Add disk-based memory storage

--- a/SITE/src/main/resources/application.properties
+++ b/SITE/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=SITE
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:siteproject
+spring.datasource.url=jdbc:h2:file:./data/siteproject;DB_CLOSE_DELAY=-1;WRITE_DELAY=1000
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.sql.init.mode=always
+
 
 # Hibernate settings
 spring.jpa.show-sql=true
