--- a/SITE/.gitignore
+++ b/SITE/.gitignore
@@ -3,6 +3,7 @@ HELP.md
 build/
 !gradle/wrapper/gradle-wrapper.jar
 data/siteproject.mv.db
+!data/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
