Make Cards Clickable + Fix UI for Objectives on Project Student Management

--- a/SITE/src/main/resources/application.properties
+++ b/SITE/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 # HTTPS Settings
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store=file:/opt/SITEApp/siteapp.p12
-server.ssl.key-store-password=$DP_2025_4D4_UN1V3RS1TY
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=siteapp
+server.port=8080
+#server.ssl.enabled=true
+#server.ssl.key-store=file:/opt/SITEApp/siteapp.p12
+#server.ssl.key-store-password=$DP_2025_4D4_UN1V3RS1TY
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=siteapp
