--- a/SITE/src/main/resources/application.properties
+++ b/SITE/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.sql.init.mode=always
 
 # Hibernate settings
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 file.upload-dir=uploads
 spring.servlet.multipart.max-file-size=100MB
